[gd_scene load_steps=9 format=1]

[ext_resource path="res://scripts/enemy.gd" type="Script" id=1]
[ext_resource path="res://art/sheet.ufoGreen.atex" type="Texture" id=2]
[ext_resource path="res://art/sheet.ufoRed.atex" type="Texture" id=3]
[ext_resource path="res://scenes/enemy_paths.tscn" type="PackedScene" id=4]
[ext_resource path="res://audio/laser1.wav" type="Sample" id=5]

[sub_resource type="CircleShape2D" id=1]

custom_solver_bias = 0.0
radius = 46.7894

[sub_resource type="Animation" id=2]

resource/name = "rotate"
length = 2.0
loop = true
step = 0.1
tracks/0/type = "value"
tracks/0/path = NodePath("sprite:transform/rot")
tracks/0/interp = 1
tracks/0/imported = false
tracks/0/keys = { "times":FloatArray( 0, 1, 2 ), "transitions":FloatArray( 1, 1, 1 ), "update":0, "values":[ 0.0, 180.0, 360.0 ] }
tracks/1/type = "value"
tracks/1/path = NodePath("sprite:transform/scale")
tracks/1/interp = 1
tracks/1/imported = false
tracks/1/keys = { "times":FloatArray( 1.2, 1.4 ), "transitions":FloatArray( 1, 1 ), "update":0, "values":[ Vector2( 0.7, 0.7 ), Vector2( 1, 1 ) ] }
tracks/2/type = "value"
tracks/2/path = NodePath("collision:transform/scale")
tracks/2/interp = 1
tracks/2/imported = false
tracks/2/keys = { "times":FloatArray( 1.2, 1.4 ), "transitions":FloatArray( 1, 1 ), "update":0, "values":[ Vector2( 0.7, 0.7 ), Vector2( 1, 1 ) ] }
tracks/3/type = "value"
tracks/3/path = NodePath("sprite:texture")
tracks/3/interp = 1
tracks/3/imported = false
tracks/3/keys = { "times":FloatArray( 1.2, 1.3, 1.5, 1.6 ), "transitions":FloatArray( 1, 1, 1, 1 ), "update":1, "values":[ ExtResource( 3 ), ExtResource( 2 ), ExtResource( 3 ), ExtResource( 2 ) ] }

[sub_resource type="SampleLibrary" id=3]

samples/laser1 = { "db":0.0, "pitch":1.0, "sample":ExtResource( 5 ) }

[node name="enemy" type="Area2D"]

transform/pos = Vector2( 480.731, 260.321 )
input/pickable = true
shapes/0/shape = SubResource( 1 )
shapes/0/transform = Matrix32( 0.948729, 0, 0, 0.948729, 0, 0 )
shapes/0/trigger = false
gravity_vec = Vector2( 0, 1 )
gravity = 98.0
linear_damp = 0.1
angular_damp = 1.0
script/script = ExtResource( 1 )
__meta__ = { "_edit_group_":true }

[node name="sprite" type="Sprite" parent="."]

transform/rot = 307.373
transform/scale = Vector2( 0.948729, 0.948729 )
texture = ExtResource( 2 )
region_rect = Rect2( 702, 54, 1, 0 )

[node name="collision" type="CollisionShape2D" parent="."]

transform/scale = Vector2( 0.948729, 0.948729 )
shape = SubResource( 1 )
trigger = false
_update_shape_index = 0

[node name="anim" type="AnimationPlayer" parent="."]

playback/process_mode = 1
playback/default_blend_time = 0.0
root/root = NodePath("..")
anims/rotate = SubResource( 2 )
playback/active = true
playback/speed = 0.5
blend_times = [  ]
autoplay = "rotate"

[node name="enemy_paths" parent="." instance=ExtResource( 4 )]

[node name="bullet_container" type="Node" parent="."]

[node name="shoot_timer" type="Timer" parent="."]

process_mode = 1
wait_time = 1.0
one_shot = false
autostart = false

[node name="shoot_sounds" type="SamplePlayer2D" parent="."]

params/volume_db = 0.0
params/pitch_scale = 1.0
params/attenuation/min_distance = 1.0
params/attenuation/max_distance = 2048.0
params/attenuation/distance_exp = 1.0
config/polyphony = 1
config/samples = SubResource( 3 )
config/pitch_random = 0.0

[connection signal="timeout" from="shoot_timer" to="." method="_on_shoot_timer_timeout"]


